compiler/test/parse-err/div-bool-unsupported.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func DivBoolUnsupported(
    // expected-note@below{{operands have semiring bool}}
    a: bool, b: bool) -> bool {
    // Division is not supported for bool semiring (only real and trop_int)
    // expected-error@below{{division is only supported for real and trop_int types}}
    return a / b;
}
